--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,8 +1,10 @@
 .nav {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	padding: 0.5em;
 	height: 3em;
+	background-color: rgba(204, 227, 222, 0.7);
+	border-bottom: 2px solid #a4c3b2;
 }
 
 .nav-search {
@@ -23,7 +25,7 @@
 	cursor: pointer;
 	display: flex;
 	align-items: center;
-	padding: 0.05em;
+	padding: 0.25em;
 	border: 1px solid black;
 	width: 5em;
 	border-radius: 1em;
@@ -32,13 +34,69 @@
 .icon-img {
 	cursor: pointer;
 	height: 3em;
+	max-width: 50px;
+}
+
+.icon-img:hover,
+.user-img:hover,
+.theme-slider:hover,
+.nav-search:hover {
+	transform: scale(103%);
+}
+
+.nav-search:focus {
+	transform: scale(103%);
 }
 
 .slider-img {
 	height: 2em;
 }
 
+.profile-div {
+	width: 2em;
+	height: 12.75em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.user-img {
+	height: 3em;
+	max-width: 50px;
+	cursor: pointer;
+}
+
 .mobile-nav-deactive {
 	display: flex;
 	gap: 3em;
+}
+
+/* Drop Down Menu */
+
+.dropdown {
+	/* position: absolute; */
+	height: fit-content;
+	margin: 0.25em;
+	border-radius: 15px;
+	border: 1px solid #6b9080;
+	background-color: rgba(204, 227, 222, 0.7);
+}
+
+.dropdown-content {
+	min-width: 80px;
+}
+
+a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	display: flex;
+	justify-content: end;
+}
+
+a:hover {
+	background-color: #cce3de;
+	border-radius: 15px;
 }
