--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,19 @@
-:root {
-	--dm-color-one: #231c07;
-	--dm-color-two: #1a321c;
-	--dm-color-three: #6b9080;
-	--dm-color-four: #a4c3b2;
-	--dm-color-five: #cce3de;
-	--lm-color-one: #6b9080;
-	--lm-color-two: #a4c3b2;
-	--lm-color-three: #cce3de;
-	--lm-color-four: #eaf4f4;
-	--lm-color-five: #f6fff8;
-}
+/* 
+Light-grey
+#f7f7f7
+
+Slate-grey
+#343a40
+
+Medium-grey
+#a9a9a9
+
+Light-blue
+#569cd6
+
+Dark-blue
+#00416a 
+*/
 
 * {
 	padding: 0px;
@@ -17,28 +21,28 @@
 	font-size: 100%;
 	vertical-align: baseline;
 	font-family: 'Alata';
-	color: var(--dm-color-two);
+	color: #343a40;
 }
 
 body {
-	background-color: #a4c3b2;
+	background-color: #f7f7f7;
 }
 
 button {
 	cursor: pointer;
 	padding: 0.5em;
-	border-radius: 0.75em;
-	border: 1px solid var(--dm-color-three);
-	background-color: var(--dm-color-five);
+	border-radius: 0.35em;
+	border: 1px solid;
+	background-color: #f7f7f7;
 }
 
 input {
 	padding: 0.5em;
-	border-radius: 1em;
+	border-radius: 0.5em;
 }
 
 button:hover {
-	box-shadow: 1px 1px 1px var(--lm-color-one);
+	box-shadow: 2px 2px 2px #569cd6;
 }
 
 button:hover,
