--- a/src/styles/ViewMode.css
+++ b/src/styles/ViewMode.css
@@ -44,7 +44,7 @@ input[type='checkbox'].toggle:focus + label::before {
 }
 
 input[type='checkbox'].toggle:checked + label::before {
-	background-color: #569cd6;
+	background-color: rgba(86, 156, 214, 0.7);
 }
 
 input[type='checkbox'].toggle:checked + label::after {
