--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,6 +1,5 @@
 .nav {
 	display: flex;
-	justify-content: space-evenly;
 	padding: 0.5em;
 	height: 3em;
 	background-color: #f7f7f7;
@@ -18,7 +17,7 @@
 
 .nav-assets {
 	display: flex;
-	gap: 3em;
+	gap: 1em;
 }
 
 .theme-slider {
@@ -60,11 +59,6 @@
 	background-color: rgba(86, 156, 214, 0.7);
 }
 
-.mobile-nav-deactive {
-	display: flex;
-	align-items: center;
-}
-
 .mail {
 	transition: background-color 0.3s ease;
 	border-radius: 0.35em;
@@ -86,6 +80,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
+	margin-left: 1em;
 }
 
 .user-img {
@@ -103,17 +98,27 @@
 
 .mobile-nav-deactive {
 	display: flex;
-	gap: 3em;
+	align-items: center;
+	gap: 1em;
+}
+.mobile-nav-active {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 /* Drop Down Menu */
 
 .dropdown {
 	background-color: #f7f7f7;
-	height: fit-content;
 	margin: 0.5em;
 	border-radius: 0.25em;
 	border: 1px solid;
+}
+
+.profile-dropdown {
+	height: fit-content;
 }
 
 .dropdown-content {
@@ -131,4 +136,8 @@ a {
 a:hover {
 	background-color: rgba(86, 156, 214, 0.7);
 	border-radius: 0.25em;
+}
+
+.profile-dropdown.deactive {
+	display: none;
 }
