--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,7 +66,7 @@ button {
 	padding-left: 15px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	background-color: #cce3de;
+	background-color: #a4c3b2;
 	border: 0px;
 	border-radius: 5px;
 }
