--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,3 +70,13 @@ button {
 	border: 0px;
 	border-radius: 5px;
 }
+
+li {
+	list-style: inside circle;
+	cursor: pointer;
+	margin: 5px;
+}
+
+li:hover {
+	color: white;
+}
