--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -32,6 +32,7 @@
 	display: flex;
 	height: 35px;
 	border-bottom: 1px solid grey;
+	background-color: #f6fff8;
 }
 
 .main-title {
@@ -51,6 +52,7 @@
 
 .nav-link {
 	cursor: pointer;
+	margin: 5px;
 }
 
 .nav-link:hover {
@@ -83,4 +85,12 @@
 
 .sign-in-btn {
 	width: 8em;
+}
+
+@media (max-width: 1450px) {
+	.newsletter,
+	.donation,
+	.search-icon {
+		display: none;
+	}
 }
