Changed to 'click to open' rather than on hover

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -24,6 +24,11 @@
 .subMenu-topic {
 	padding: 2px;
 	border-radius: 5px;
+	cursor: pointer;
+}
+
+.subMenu-topic:hover {
+	color: white;
 }
 
 .subNav-dropdown {
